Ghost auth good, fixed start position of paddles and puck, fixed game window size, fixed puck size, minor style fixes (gap to margin for bowser compatibility)

--- a/front/src/styles/Chat.scss
+++ b/front/src/styles/Chat.scss
@@ -314,19 +314,3 @@ $green: #81A439;
 		margin-top: 20px;
 	}
 }
-
-#game
-{
-	width: 100%;
-	height: 100%;
-	margin-right: 17px;
-	// border: 1px solid red;
-}
-
-#game_window
-{
-	display: inline-block;
-	height: 100%;
-	width: 100%;
-}
-
